--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1816,6 +1816,8 @@ pyotgw==2.1.3
 
 # homeassistant.auth.mfa_modules.notify
 # homeassistant.auth.mfa_modules.totp
+pyotp==2.7.0
+
 # homeassistant.components.otp
 pyotp==2.8.0
 
