--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1293,7 +1293,8 @@ pyotgw==2.1.3
 
 # homeassistant.auth.mfa_modules.notify
 # homeassistant.auth.mfa_modules.totp
-pyotp==2.7.0
+# homeassistant.components.otp
+pyotp==2.8.0
 
 # homeassistant.components.overkiz
 pyoverkiz==1.7.3
