--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -352,7 +352,7 @@ bellows==0.34.6
 bimmer_connected==0.12.0
 
 # homeassistant.components.bluetooth
-bleak-retry-connector==2.10.2
+bleak-retry-connector==2.13.0
 
 # homeassistant.components.bluetooth
 bleak==0.19.2
@@ -367,7 +367,7 @@ blinkpy==0.19.2
 bluemaestro-ble==0.2.0
 
 # homeassistant.components.bluetooth
-bluetooth-adapters==0.14.1
+bluetooth-adapters==0.15.2
 
 # homeassistant.components.bluetooth
 bluetooth-auto-recovery==1.0.3
@@ -1293,7 +1293,8 @@ pyotgw==2.1.3
 
 # homeassistant.auth.mfa_modules.notify
 # homeassistant.auth.mfa_modules.totp
-pyotp==2.7.0
+# homeassistant.components.otp
+pyotp==2.8.0
 
 # homeassistant.components.overkiz
 pyoverkiz==1.7.3
