--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -156,7 +156,7 @@ aioecowitt==2023.01.0
 aioemonitor==1.0.5
 
 # homeassistant.components.esphome
-aioesphomeapi==13.0.2
+aioesphomeapi==13.1.0
 
 # homeassistant.components.flo
 aioflo==2021.11.0
@@ -671,6 +671,9 @@ epson-projector==0.5.0
 
 # homeassistant.components.epsonworkforce
 epsonprinter==0.0.9
+
+# homeassistant.components.esphome
+esphome-dashboard-api==1.2.3
 
 # homeassistant.components.netgear_lte
 eternalegypt==0.0.12
