--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -143,7 +143,7 @@ aioecowitt==2023.01.0
 aioemonitor==1.0.5
 
 # homeassistant.components.esphome
-aioesphomeapi==13.0.2
+aioesphomeapi==13.1.0
 
 # homeassistant.components.flo
 aioflo==2021.11.0
@@ -521,6 +521,9 @@ ephem==4.1.2
 
 # homeassistant.components.epson
 epson-projector==0.5.0
+
+# homeassistant.components.esphome
+esphome-dashboard-api==1.2.3
 
 # homeassistant.components.eufylife_ble
 eufylife_ble_client==0.1.7
